--- a/resources/frontend/assets/scss/main.module.scss
+++ b/resources/frontend/assets/scss/main.module.scss
@@ -7,6 +7,12 @@ $b_primary: #ffffff;
 $b_secondary: #f8f8f8;
 $b_darker: #ebebeb;
 
+$c_primary: #373737;
+$c_secondary: #ffffff;
+$c_gray: #d7d7d7;
+$c_mediumgray: #989898;
+$c_darkgray: #737373;
+$c_dark: #3f3f3f;
 body {
     margin: 0;
     font-family: "Manrope", sans-serif;
