--- a/resources/frontend/components/Table.module.scss
+++ b/resources/frontend/components/Table.module.scss
@@ -97,3 +97,9 @@ hr {
     display: flex;
     column-gap: 10px;
 }
+
+.noData {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
