--- a/resources/frontend/components/Filter.module.scss
+++ b/resources/frontend/components/Filter.module.scss
@@ -5,6 +5,7 @@
     border-radius: 5px;
     padding: 15px 20px;
     width: fit-content;
+    height: fit-content;
     background-color: transparent;
     font-size: 16px;
     color: $c_darkgray;
