--- a/resources/frontend/components/Input.module.scss
+++ b/resources/frontend/components/Input.module.scss
@@ -4,7 +4,6 @@
     border: 1px solid $c_gray;
     border-radius: 5px;
     padding: 15px 20px;
-    width: fit-content;
     column-gap: 10px;
     display: flex;
     align-items: center;
@@ -26,4 +25,11 @@
 
 .input::placeholder {
     color: $c_darkgray;
+}
+
+.inputLabel {
+    color: $c_darkgray;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
