--- a/resources/frontend/components/TopBar.module.scss
+++ b/resources/frontend/components/TopBar.module.scss
@@ -9,6 +9,12 @@
     top: 0;
     right: 0;
     padding: 0 50px 0 50px;
-    justify-content: end;
+    justify-content: space-between;
     border-bottom: 1px solid $c_gray;
+}
+
+.topBarGroup {
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
 }
