--- a/public/assets/bundle.css
+++ b/public/assets/bundle.css
@@ -621,3 +621,56 @@ body {
   font-weight: 600;
   margin-bottom: 10px;
 }
+/*!***********************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/pages/Customers.module.scss ***!
+  \***********************************************************************************************************************************************************************************************************************************************************************/
+@font-face {
+  font-family: "Manrope";
+  src: url(/manrope.ttf) format("truetype");
+}
+body {
+  margin: 0;
+  font-family: "Manrope", sans-serif;
+  background-color: #f8f8f8;
+}
+
+.Customers-module-customersContent-Gy6hb {
+  height: fit-content;
+  max-height: calc(100% - 170px);
+  width: calc(100% - 330px);
+  position: absolute;
+  top: 71px;
+  right: 0;
+  padding: 50px 50px 50px 50px;
+}
+
+.Customers-module-customersHeader-yP_06 {
+  font-weight: bolder;
+  font-size: 24px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 45px;
+}
+
+.Customers-module-customersMain-ATi51 {
+  background-color: #ffffff;
+  margin-top: 20px;
+  width: 100%;
+  height: calc(100% - 68px);
+  border: 1px solid #d7d7d7;
+  border-radius: 5px;
+}
+
+.Customers-module-customersSearchFilter-g1q1E {
+  display: flex;
+  justify-content: end;
+  align-items: baseline;
+  padding: 20px 40px 20px 0;
+  column-gap: 20px;
+}
+
+.Customers-module-customersFilter-bhStT {
+  background-color: #ffffff !important;
+  color: #989898 !important;
+  border: 1px solid #d7d7d7 !important;
+}
